parker6k: new template for P6K specific axis parameters. Implemented configurable delay on done moving callback from driver.

--- a/parker6kApp/Db/Makefile
+++ b/parker6kApp/Db/Makefile
@@ -10,7 +10,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install)
 # databases, templates, substitutions like this
-#DB += parker6k.template
+DB += p6k_axis.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
