--- a/parker6kApp/Db/p6k_axis.template
+++ b/parker6kApp/Db/p6k_axis.template
@@ -40,10 +40,11 @@ record(waveform, "$(M):ErrorMessage")
 }
 
 # ///
-# /// Automatic drive enable
+# /// Automatic drive enable (enable drive at the start of a move)
 # ///
-record(bo, "$(M):AutoDriveEnable")
+record(bo, "$(M):AutoEnable")
 {
+   field(PINI, "YES")
    field(DTYP, "asynInt32")
    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_A_AUTO_DRIVE_ENABLE")
    field(ZNAM, "No")
@@ -51,6 +52,69 @@ record(bo, "$(M):AutoDriveEnable")
    field(VAL,  "0")
    info(autosaveFields, "VAL")
 }
+
+# ///
+# /// Automatic drive disable 
+# /// Disable drive after a configurable time. This record
+# /// enables/disables the record logic that deals with this.
+# ///
+record(bo, "$(M):AutoDisable")
+{
+   field(PINI, "YES")
+   field(ZNAM, "Yes")
+   field(ONAM, "No")
+   field(VAL,  "1")
+   info(autosaveFields, "VAL")
+}
+
+# ///
+# /// Timer for the automatic drive disable.
+# /// This is disabled when a move is in progress,
+# /// and reset+enabled at the end of a move.
+# ///
+record(calcout, "$(M):AutoDisableTimer")
+{
+   field(DESC, "Disable Timer")
+   field(CALC, "A+1")
+   field(OUT, "$(M):AutoDisableTimer.A NPP")
+   field(SCAN, "1 second")
+}
+
+record(calcout, "$(M):AutoDisableAction")
+{
+   field(DESC, "Disable Drive")
+   field(INPA, "$(M):AutoDisableTimer.A CP")
+   field(INPB, "0")
+   field(CALC, "A==B")
+   field(OOPT, "When Non-zero")
+   field(DOPT, "Use OCAL")
+   field(OCAL, "0")
+   field(OUT, "$(M).CNEN PP")
+   info(autosaveFields, "B")
+   field(SDIS, "$(M):AutoDisable")     
+}
+
+# ///
+# /// Disable AutoDriveDisableTimer when a move is active
+# ///
+record(calcout, "$(M):AutoDisableCtrl")
+{
+   field(INPA, "$(M).DMOV CP")
+   field(CALC, "!A")
+   field(OUT, "$(M):AutoDisableTimer.DISA")
+   field(FLNK, "$(M):ResetDisableTimer")    
+}
+
+# ///
+# /// Reset AutoDriveDisableTimer on a DMOV transition
+# ///
+record(dfanout, "$(M):ResetDisableTimer") {
+  field(VAL, "0")
+  field(OUTA, "$(M):AutoDisableTimer.A PP")   
+}
+
+
+
 
 # These are useful if you need to set the software limits 
 # under the feet of the motor record.
