parker6k: add asynRecord to controller template. This is meant to be connected to the low level Asyn port.

--- a/parker6kApp/Db/p6k_controller.template
+++ b/parker6kApp/Db/p6k_controller.template
@@ -54,4 +54,20 @@ record(waveform, "$(S):Response")
 }
 
 
+##################################################
+# General purpose Asyn record
+##################################################
+
+# /// 
+# /// Asyn record
+# ///
+record(asyn,"$(S):Asyn")
+{
+    field(DTYP,"asynRecordDevice")
+    field(PORT,"$(COMMSPORT)")
+    field(ADDR,"$(COMMSADDR)")
+    field(OMAX,"1024")
+    field(IMAX,"1024")
+}
+
 
