parker6k: add ability to optionally print commands and responses to standard out (non asyn trace style). This should make it easier to debug multi controller IOCs. It's still possible to use asyn trace logging for more detailed debug, however that doesn't print out the port name so can be confusing in multiple controlers IOCs.

--- a/parker6kApp/Db/p6k_controller.template
+++ b/parker6kApp/Db/p6k_controller.template
@@ -63,6 +63,20 @@ record(bi, "$(S):Config")
 }
 
 # ///
+# /// Log commands sent to the controller (print to standard out)
+# ///
+record(bo, "$(S):Log")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_C_LOG")
+   field(ZNAM, "No")
+   field(ONAM, "Yes")
+   field(VAL,  "0")
+   info(autosaveFields, "VAL")
+}
+
+# ///
 # /// User command
 # ///
 record(waveform, "$(S):Command")
