--- a/parker6kApp/Db/p6k_controller.template
+++ b/parker6kApp/Db/p6k_controller.template
@@ -106,6 +106,32 @@ record(longin, "$(S):TLIM")
 }
 
 # ///
+# /// Enable TOUT polling in the controller object
+# /// This reads the state of the digital outputs
+# /// and populates the TOUT record.
+# ///
+record(bo, "$(S):EnableTOUT")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_C_TOUT_ENABLE")
+   field(ZNAM, "No")
+   field(ONAM, "Yes")
+   field(VAL,  "0")
+   info(autosaveFields, "VAL")
+}
+
+# ///
+# /// TOUT bits. This will be zero if EnableTOUT is not on.
+# ///
+record(longin, "$(S):TOUT")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_C_TOUT_BITS")
+   field(SCAN, "I/O Intr")
+}
+
+# ///
 # /// User command
 # ///
 record(waveform, "$(S):Command")
