New template file to define a set of records to hold the homing definition for each P6K motor.

--- a/parker6kApp/Db/Makefile
+++ b/parker6kApp/Db/Makefile
@@ -12,6 +12,7 @@ include $(TOP)/configure/CONFIG
 # databases, templates, substitutions like this
 DB += p6k_axis.template
 DB += p6k_controller.template
+DB += p6k_axis_home.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
