Add a new parameter to control if we send the velocity, acceleration and S-curve params to the controller each time we do a move. The default behaviour is to do this. If we don't send these each time, we only send a new position and the move command. This is useful for some axes that have very sensitive velo/accel params that shouldn't be changed, or have non-standard S-curve params that need to be setup by hand.

--- a/parker6kApp/Db/p6k_axis.template
+++ b/parker6kApp/Db/p6k_axis.template
@@ -157,6 +157,31 @@ record(bo, "$(M):LimitDrive")
    info(autosaveFields, "VAL")
 }
 
+# ///
+# /// If this is enabled then the driver will only send a new position
+# /// to the controller and not the latest value of the velocity 
+# /// and acceleration parameters (which also includes the S-curve parameters).
+# ///
+record(bo, "$(M):SendPositionOnly")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_A_SEND_POSITION_ONLY")
+   field(ZNAM, "Disable")
+   field(ONAM, "Enable")
+   field(VAL,  "0")
+   info(autosaveFields, "VAL")
+}
+record(bi, "$(M):SendPositionOnly_RBV")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_A_SEND_POSITION_ONLY")
+   field(ZNAM, "Disable")
+   field(ONAM, "Enable")
+   field(SCAN, "I/O Intr")
+}
+
+
 ############################################################################
 # Time since last move
 
