Fix macro in documentation part of p6k_axis_home.template.

--- a/parker6kApp/Db/p6k_axis_home.template
+++ b/parker6kApp/Db/p6k_axis_home.template
@@ -5,7 +5,7 @@
 # 
 # Macros:
 # M - base PV name (should match the motor record)
-# H_TYPE - home type (See $(S):HomeType record for options)
+# H_TYPE - home type (See $(M):HomeType record for options)
 # H_POS - home offset to set at end of home procedure
 #
 # Matt Pearson & Gayle Green
